final touchup on markdown and comments

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,15 +2,53 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7705a958",
+   "id": "fa1de9ad",
    "metadata": {},
    "source": [
-    "# Pneumonia Detection from Chest X-Ray Images\n",
-    "Assignment: Image Analysis and Processing (30 May 2025)\n",
-    "Goal: Build intelligent system to detect pneumonia using classical ML and deep learning\n",
+    "# Chest X-Ray Pneumonia Detection Assignment\n",
     "\n",
+    "This notebook presents a complete workflow for detecting pneumonia from chest X-ray images using both classical machine learning and deep learning (CNN) approaches. The workflow includes data exploration, preprocessing, handling class imbalance, model training, and evaluation.\n",
     "\n",
-    "## 1. Data Exploration\n",
+    "---\n",
+    "\n",
+    "**Dataset:**\n",
+    "- The dataset consists of chest X-ray images categorized as NORMAL (healthy) and PNEUMONIA (infected).\n",
+    "- Data is split into training, validation, and test sets.\n",
+    "\n",
+    "**Goal:**\n",
+    "- Build and compare models to accurately classify X-ray images as normal or pneumonia.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c08f65aa",
+   "metadata": {},
+   "source": [
+    "## Handling Imbalanced Dataset\n",
+    "\n",
+    "Medical datasets often suffer from class imbalance, where one class (e.g., pneumonia) has significantly more samples than the other (e.g., normal). This can bias models towards the majority class and reduce their ability to detect the minority class.\n",
+    "\n",
+    "**In this dataset:**\n",
+    "- The number of pneumonia images is much higher than normal images in the training set.\n",
+    "\n",
+    "**How imbalance was addressed:**\n",
+    "- Data augmentation techniques (rotation, shifting, zooming, flipping, etc.) were applied to the normal images to synthetically increase their count and balance the classes.\n",
+    "- This helps the model learn more robust features and prevents bias towards the majority class.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f079640",
+   "metadata": {},
+   "source": [
+    "## Data Preprocessing\n",
+    "\n",
+    "- **Image Loading:** Images are loaded and resized to a fixed size (e.g., 64x64 for classical ML, 150x150 for CNN).\n",
+    "- **Normalization:** Pixel values are scaled to [0, 1] for better convergence.\n",
+    "- **Flattening:** For classical ML models, images are flattened into 1D arrays.\n",
+    "- **PCA:** Principal Component Analysis is used to reduce dimensionality and speed up training for SVM and Random Forest.\n",
+    "- **Augmentation:** As described above, augmentation is applied to balance the classes.\n",
+    "\n",
     "Dataset: https://www.kaggle.com/paultimothymooney/chest-xray-pneumonia"
    ]
   },
@@ -59,7 +97,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5dc6516",
+   "id": "7efea665",
+   "metadata": {},
+   "source": [
+    "## Classical Machine Learning Models\n",
+    "\n",
+    "### Support Vector Machine (SVM)\n",
+    "- Trained on PCA-reduced features.\n",
+    "- Hyperparameters tuned using GridSearchCV.\n",
+    "- Handles class imbalance using `class_weight='balanced'`.\n",
+    "\n",
+    "### Random Forest\n",
+    "- Trained both on raw flattened images and PCA-reduced features.\n",
+    "- Also uses `class_weight='balanced'` to address class imbalance.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2a27c11",
    "metadata": {},
    "source": [
     "### 2.0 Download Dataset"
@@ -628,6 +683,20 @@
     "evaluate_model(y_test, svm_preds, \"SVM Results (with PCA)\")\n",
     "evaluate_model(y_test, rf_preds, \"Random Forest Results (no PCA)\")\n",
     "evaluate_model(y_test, rf_preds_pca, \"Random Forest Results (with PCA)\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "620e526a",
+   "metadata": {},
+   "source": [
+    "## Deep Learning Model (CNN)\n",
+    "\n",
+    "Two CNN architectures are defined:\n",
+    "- **Simple CNN:** A basic convolutional network for quick experimentation.\n",
+    "- **Best CNN:** A deeper network with regularization (Dropout, BatchNorm, L2) for improved performance.\n",
+    "\n",
+    "Data augmentation is also applied during training to further improve generalization."
    ]
   },
   {
@@ -1428,6 +1497,31 @@
     "if os.path.exists(model_path):\n",
     "    cnn_model = load_model(model_path)\n",
     "evaluate_model_on_test(cnn_model, cnn_X_test, cnn_y_test, epochs=29)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a3d5a32",
+   "metadata": {},
+   "source": [
+    "## Results and Discussion\n",
+    "\n",
+    "### Classical ML Results\n",
+    "- **SVM (with PCA):**\n",
+    "  - The SVM model achieves reasonable accuracy and recall, especially after balancing the dataset. However, its performance is limited by the simplicity of features extracted from small images.\n",
+    "- **Random Forest (raw & with PCA):**\n",
+    "  - Random Forest performs better when trained on the raw, flattened images (no PCA) compared to PCA-reduced features. This suggests that retaining the full set of pixel features allows the Random Forest to capture more relevant patterns for classification, while PCA may discard some useful information for this model.\n",
+    "\n",
+    "### CNN Results\n",
+    "- **Best CNN Model:**\n",
+    "  - The deep CNN achieves the highest accuracy and recall among all models. The use of data augmentation, regularization, and a deeper architecture allows it to learn complex features from the X-ray images, resulting in strong performance on the test set.\n",
+    "- **Confusion Matrix & Classification Report:**\n",
+    "  - The confusion matrix and classification report show that the CNN is effective at distinguishing between normal and pneumonia cases, with high precision and recall for both classes.\n",
+    "\n",
+    "### Conclusion\n",
+    "- Balancing the dataset using data augmentation was crucial for improving model performance, especially for the minority class (normal).\n",
+    "- Deep learning models (CNNs) significantly outperform classical ML models on this image classification task, thanks to their ability to learn hierarchical features.\n",
+    "- Further improvements could include using transfer learning with pre-trained models, more advanced augmentation, or ensembling multiple models.\n"
    ]
   }
  ],
