--- a/main.ipynb
+++ b/main.ipynb
@@ -27,9 +27,7 @@
     "## Handling Imbalanced Dataset\n",
     "\n",
     "Medical datasets often suffer from class imbalance, where one class (e.g., pneumonia) has significantly more samples than the other (e.g., normal). This can bias models towards the majority class and reduce their ability to detect the minority class.\n",
-    "\n",
-    "**In this dataset:**\n",
-    "- The number of pneumonia images is much higher than normal images in the training set.\n",
+    "In this dataset, the number of pneumonia images is much higher than normal images in the training set.\n",
     "\n",
     "**How imbalance was addressed:**\n",
     "- Data augmentation techniques (rotation, shifting, zooming, flipping, etc.) were applied to the normal images to synthetically increase their count and balance the classes.\n",
@@ -273,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "cafc8819",
    "metadata": {},
    "outputs": [],
@@ -291,7 +289,7 @@
     "    else:\n",
     "        img = img_resized\n",
     "        img_normalized = img / 255.0\n",
-    "        img_final = np.expand_dims(img_normalized, axis=-1)  # Add channel dimension for grayscale\n",
+    "        img_final = np.expand_dims(img_normalized, axis=-1)  \n",
     "        return img_final, label\n",
     "\n",
     "def load_images_from_folder_parallel(folder, label, target_size=(64, 64), grayscale=False):\n",
@@ -349,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b72a24c6",
    "metadata": {},
    "outputs": [
@@ -460,7 +458,7 @@
     }
    ],
    "source": [
-    "# === Step 1: Load and preprocess ===\n",
+    "# Load and preprocess the dataset\n",
     "print(\"Loading training data...\")\n",
     "X_train, y_train = load_dataset(train_dir)\n",
     "print(f\"Loaded {len(X_train)} training images with labels: {Counter(y_train)}\")\n",
@@ -599,7 +597,7 @@
     "rf_pca_path = \"models/rf_model_pca.pkl\"\n",
     "rf_raw_path = \"models/rf_model_raw.pkl\"\n",
     "\n",
-    "# ========== Preprocess ==========\n",
+    "# Preprocess\n",
     "print(\"Flattening images...\")\n",
     "X_train_flat = fast_flatten(X_train_balanced)\n",
     "X_val_flat = fast_flatten(X_val)\n",
@@ -618,7 +616,7 @@
     "X_val_pca = pca.transform(X_val_scaled)\n",
     "X_test_pca = pca.transform(X_test_scaled)\n",
     "\n",
-    "# ========== 1. Support Vector Machine ==========\n",
+    "# 1. Support Vector Machine \n",
     "if os.path.exists(svm_path):\n",
     "    print(\"Loading existing SVM model...\")\n",
     "    best_svm_model = joblib.load(svm_path)\n",
@@ -637,7 +635,7 @@
     "\n",
     "svm_preds = best_svm_model.predict(X_test_pca)\n",
     "\n",
-    "# ========== 2. Random Forest (with PCA) ==========\n",
+    "# 2. Random Forest (with PCA) \n",
     "if os.path.exists(rf_pca_path):\n",
     "    print(\"Loading existing Random Forest (with PCA)...\")\n",
     "    rf_model_pca = joblib.load(rf_pca_path)\n",
@@ -650,7 +648,7 @@
     "\n",
     "rf_preds_pca = rf_model_pca.predict(X_test_pca)\n",
     "\n",
-    "# ========== 3. Random Forest (raw, no PCA) ==========\n",
+    "# 3. Random Forest (raw, no PCA) \n",
     "if os.path.exists(rf_raw_path):\n",
     "    print(\"Loading existing Random Forest (raw)...\")\n",
     "    rf_model = joblib.load(rf_raw_path)\n",
@@ -663,7 +661,7 @@
     "\n",
     "rf_preds = rf_model.predict(X_test_flat)\n",
     "\n",
-    "# ========== Evaluation Function ==========\n",
+    "# Evaluation Function \n",
     "def evaluate_model(y_true, y_pred, title):\n",
     "    print(f\"\\n--- {title} ---\")\n",
     "    print(classification_report(y_true, y_pred, target_names=['NORMAL', 'PNEUMONIA']))\n",
@@ -679,7 +677,7 @@
     "    plt.ylabel('Actual')\n",
     "    plt.show()\n",
     "\n",
-    "# ========== Show Results ==========\n",
+    "# Print Results \n",
     "evaluate_model(y_test, svm_preds, \"SVM Results (with PCA)\")\n",
     "evaluate_model(y_test, rf_preds, \"Random Forest Results (no PCA)\")\n",
     "evaluate_model(y_test, rf_preds_pca, \"Random Forest Results (with PCA)\")\n"
@@ -701,12 +699,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "230fe7bb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ========== 1. CNN from Scratch ==========\n",
+    "# CNN from Scratch \n",
     "def create_simple_cnn(input_shape=(64, 64, 3)):\n",
     "    model = models.Sequential([\n",
     "        layers.Conv2D(32, (3, 3), activation='relu', input_shape=input_shape),\n",
@@ -722,7 +720,7 @@
     "    return model\n",
     "\n",
     "def create_best_cnn(input_shape=(150, 150, 1)):\n",
-    "    l2_reg = 1e-4  # You can tune this if needed\n",
+    "    l2_reg = 1e-4  \n",
     "\n",
     "    model = Sequential([\n",
     "        layers.Conv2D(32, (3, 3), strides=1, padding='same', activation='relu', kernel_regularizer=regularizers.l2(l2_reg), input_shape=input_shape),\n",
@@ -1107,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "93f85b52",
    "metadata": {},
    "outputs": [
@@ -1211,7 +1209,7 @@
     }
    ],
    "source": [
-    "# === Step 1: Load and preprocess for CNN (150x150) ===\n",
+    "# Load and preprocess for CNN (150x150)\n",
     "cnn_target_size = (150, 150)\n",
     "\n",
     "print(\"Loading training data (150x150)...\")\n",
@@ -1389,21 +1387,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "ca28c524",
    "metadata": {},
    "outputs": [],
    "source": [
     "def evaluate_model_on_test(model, test_data, test_labels, batch_size=32, epochs=30):\n",
-    "    # 1. Predict\n",
+    "    # Predict\n",
     "    y_pred_probs = model.predict(test_data, batch_size=batch_size)\n",
     "    y_pred = (y_pred_probs > 0.5).astype(\"int32\")\n",
     "\n",
-    "    # 2. Classification report\n",
+    "    # Classification report\n",
     "    print(\"📊 Classification Report:\")\n",
     "    print(classification_report(test_labels, y_pred, target_names=[\"Normal\", \"Pneumonia\"]))\n",
     "\n",
-    "    # 3. Analysis\n",
+    "    # Analysis\n",
     "    epochs = [i for i in range(epochs)]\n",
     "    fig , ax = plt.subplots(1,2)\n",
     "    train_acc = history.history['accuracy']\n",
@@ -1427,7 +1425,7 @@
     "    ax[1].set_ylabel(\"Training & Validation Loss\")\n",
     "    plt.show()\n",
     "\n",
-    "    # 4. Confusion matrix\n",
+    "    # Confusion matrix\n",
     "    cm = confusion_matrix(test_labels, y_pred)\n",
     "    plt.figure(figsize=(6, 5))\n",
     "    sns.heatmap(cm, annot=True, fmt='d', cmap='Blues', xticklabels=[\"Normal\", \"Pneumonia\"], yticklabels=[\"Normal\", \"Pneumonia\"])\n",
@@ -1436,7 +1434,7 @@
     "    plt.title(\"CNN Confusion Matrix\")\n",
     "    plt.show()\n",
     "\n",
-    "    # 5. Accuracy\n",
+    "    # Accuracy\n",
     "    accuracy = accuracy_score(test_labels, y_pred)\n",
     "    print(f\"Test Accuracy: {accuracy:.4f}\")"
    ]
